--- a/static/root/index.html
+++ b/static/root/index.html
@@ -52,8 +52,6 @@
             /* Optional: add padding if needed */
         }
 
-
-
         .button {
             display: inline-block;
             /* Correct display type for the button */
@@ -75,14 +73,6 @@
             background-color: #A93226;
         }
 
-        /* Larger select dropdown */
-        select {
-            padding: 5px;
-            /* Add padding to increase the size */
-            font-size: 16px;
-            /* Optional: increase font size */
-        }
-
         /* Larger label text */
         label {
             font-size: 20px;
@@ -91,8 +81,8 @@
 
         /* Larger textarea */
         textarea {
-            width: 50%;
-            height: 20px;
+            width: 80%;
+            height: 200px;
             /* Adjust the height as needed */
             padding: 10px;
             font-size: 16px;
@@ -107,37 +97,15 @@
     <div class="hero">
         <div class="hero-content">
             <h1>Movie Recommendation</h1>
-            <form action="/submit-your-choice" method="post">
-                <label for="choices">Select a movie category:</label>
-                <br>
-                <select id="choices" name="choices">
-                    <option value="Action">Action</option>
-                    <option value="Adventure">Adventure</option>
-                    <option value="Animation">Animation</option>
-                    <option value="Crime">Crime</option>
-                    <option value="Family">Family</option>
-                    <option value="Fantasy">Fantasy</option>
-                    <option value="Film-noir">Film-noir</option>
-                    <option value="History">History</option>
-                    <option value="Horror">"Horror</option>
-                    <option value="Mystery">Mystery</option>
-                    <option value="Romance">Romance</option>
-                    <option value="SciFi">SciFi</option>
-                    <option value="Sports">Sports</option>
-                    <option value="Thriller">Thriller</option>
-                    <option value="War">War</option>
-                </select>
-                <br>
-                <!-- Added line break -->
+            <form action="/movie" method="post">
                 <label for="description">Describe the movie you want to watch:</label>
                 <br>
                 <textarea id="description" name="description" placeholder="Type your description here..."></textarea>
-                <br> <!-- Added line break -->
-                <a href="finder.html" class="button">Pick Your Movies</a>
+                <br>
+                <button type="submit" class="button">Get Recommendation</button>
             </form>
         </div>
     </div>
-
 
 </body>
 
